--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@types/body-parser": "^1.19.5",
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "firebase": "^11.4.0",
     "firebase-admin": "^13.0.2",
-    "geofirestore": "^5.2.0",
+    "fireorm": "^0.23.3",
+    "geofirestore": "^4.3.0",
+    "geofirex": "^0.0.2",
+    "ioredis": "^5.6.0",
     "ngeohash": "^0.6.3",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "rxjs": "^6.6.7"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
